# prim-char

./: .hlint.yaml  CHANGELOG.md  README.md  default.nix  flake.nix  hie.yaml  prim-char.cabal  release.nix  shell.nix
.zsh/: .zsh_history
nix/: pkgs.nix
nix/exts/: prim-char.nix
nix/haskell-packages/: prim-int.nix
nix/overlays/: haskell.nix
nix/pkgs/: prim-int.nix
src/Data/Char/: Prim.hs
src/Data/Unicode/: Prim.hs
