cabal-version: 2.4

name:        prim-char
category:    Data
version:     1.0.0
synopsis:    Facilities for working with unboxed characters.
description: Facilities for working with unboxed characters.

author:       jacob leach
maintainer:   jacobleach@protonmail.com
copyright:    2022, Jacob Leach
homepage:     https://github.com/riz0id/prim-char
license:      ISC
license-file: LICENSE
build-type:   Simple

extra-source-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC == 9.2.2

flag llvm
  Description: Compile using the LLVM backend.
  Default:     False
  Manual:      True

common common
  default-language: Haskell2010

  default-extensions:
    ImportQualifiedPost MagicHash

  ghc-options:
    -Wall

    -- `-j4` is set (as opposed to `-j`) due to the small number of modules that 
    -- are exported by this package.
    -j4

    -- `-O` is explicitly set since none of the functions exported by this 
    -- library would benefit from higher optimization levels. This helps reduce 
    -- compile times. 
    -O

    -- `-fmax-simplifier-iterations` is set to keep compile times in check. 
    -- The functions in this library are simple and do not need very many 
    -- simplifier passes.
    -fmax-simplifier-iterations=4

  build-depends:
    , base        >= 4.15.1 && < 4.17
    , prim-bool   >= 1.0.1  && < 1.1.0
    , prim-compat >= 1.0.0  && < 1.1.0
    , prim-int    >= 1.0.0  && < 1.1.0
    , ghc-prim    >= 0.7.0  && < 0.9

library
  import:         common
  hs-source-dirs: src

  default-extensions:
    ForeignFunctionInterface UnliftedFFITypes

  if flag(llvm) 
    ghc-options: -fllvm 

  build-depends:
    , template-haskell >= 2.17.0 && < 2.19

  exposed-modules:
    Data.Char.Prim
    Data.Unicode.Prim

source-repository head
  type:     git
  location: https://github.com/riz0id/prim-char
